ebus Daemon (ebusd) - ChangeLog
===============================

2013-02-09:
* Upgrade the send ability for ebus SET commands. (only d1b and d1c)

2013-02-06:
* Fix: increase length of ebus command from 20 to 30
* Fix: set initiale value of crclen before escape in eb_send_data_prepare()
* Fix: in eb_msg_decode_result() do strtok on local copy from r_pos. Maybe
       we don't wont do modife the original value.
* Fix: compare strlen of given command with command from csv file too.
* Add: send_retry parameter (2=default) to daemon configuration.

2013-02-04:
* Add the ability to send commands via telnet to daemon
  (This ist just implemented for GET and a few ebus commands for response)
* The telnet commands will collected into a message buffer.
  If the cycle buffer is free, only one command is sent.

2013-02-01:
* Add functions to read ebus command get files and load them into nested
  structure. This will be used to send and decode ebus messages. 
* Try to read daemon configuration file at daemon directory too.
* ebus files splitted into ebus-decode and ebus-bus part.
* Moved log.* from src to lib directory and build liblog.a

2013-01-25:
* Add autogen.sh script in main dir. Just type ./autogen.sh for build all.
* Logging functions changed from level to class system. The advantage of this
  system is that different classes can be easily mixed together.
  There are now 8 classes: INF, NOT, WAR, ERR, DBG, EBH, EBS, NET
  and ALL for just all messages.

2013-01-24:
* Add new directory contrib with daemon configuration file
* Add functions with cfg_ prefix (utils). These parse 
  the daemon configuration file and set parameters.
  Priority of given configuration by:
	1. commandline argurments
	2. configuration file
	3. default configuration (hard coded)

2013-01-17:
* Initial release
* Prepare Source to compile with GNU Autotools